tests/data/ValidCase/src/Context/Domain/SyncEvent.php
<?php declare(strict_types=1);

namespace Tests\ValidCase\Context\Domain;

use Mage\Bus\Event;

class SyncEvent implements Event {}
